# vingt-et-un

./: .clang-format  .clang-tidy  .git-blame-ignore-revs  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  readme.md
.claude/: settings.json  settings.local.json
.claude/agents/: code-reviewer.md  test-designer.md
.claude/commands/: document.md
.claude/skills/: code-inspection-checklist.md  conventional-commit-msg.md  creating-agents.md  github-actions.md  split-pdf.md  test-case-design.md  test-levels.md  testing-principles.md  troubleshooting.md
.claude/skills/excalidraw/: SKILL.md
.claude/skills/excalidraw/references/: arrows.md  json-format.md  validation.md
.claude/skills/pre-pr/: SKILL.md
.github/: CODEOWNERS  blackjack-qml.desktop
.github/workflows/: clang-format.yml  clang-tidy.yml  cmake-multi-platform.yml  cmake-qml.yml  release.yml
app/qml/: CMakeLists.txt  CardView.qml  GameController.cpp  GameController.h  HandView.qml  Main.qml  Theme.qml  main.cpp
app/qml/tests/: README.md  tst_cardview.qml  tst_gamecontroller.qml  tst_handview.qml  tst_main.cpp  tst_mainwindow.qml
cmake/: FetchCatch2.cmake  version.h.in
docs/: architecture.excalidraw
docs/design/: architecture.md  decisions.md  game-logic.md  qml-frontend.md  style-guide.md
scripts/: generate-theme.js
src/: BlackjackGame.cpp  CMakeLists.txt  CompileTimeChecks.h  blackjack-game.cpp  blackjack-game.h  card.h  deck.cpp  deck.h  main.cpp  streaming.cpp  streaming.h  test-decks.cpp  test-decks.h
styles/: theme.css  tokens.json
test/: CMakeLists.txt  README.md  card_tests.cpp  deck_tests.cpp  game_tests.cpp  streaming_tests.cpp
